fix jump

--- a/assets/scss/03-organisms/_tab-container.scss
+++ b/assets/scss/03-organisms/_tab-container.scss
@@ -33,11 +33,11 @@
     border-left: 1px solid $c-gray-light;
     border-top: 1px solid $c-gray-light;
     border-right: none;
+    border-bottom: none;
     margin-bottom: -1px;
     display: block;
 
     &:first-child {
-      border-right: none;
       border-left-width: 1px;
     }
 
@@ -49,7 +49,6 @@
       outline: none;
       border-top-color: $c-primary !important;
       border-left-color: $c-gray-light !important;
-      border-bottom: none;
     }
 
     &--active {
